test(serde): Java update